[package]
name = "rust-code-converter"
version = "0.1.0"
edition = "2021"
description = "Universal Code to HTML Converter using Torchlight API"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
walkdir = "2.3"
tempfile = "3.8"
dotenv = "0.15"
